Changed oneOf into allOf and added test example
